--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,11 @@ rsa==4.9
 six==1.16.0
 uritemplate==4.1.1
 urllib3==1.26.16
+
+pip~=23.1.2
+attrs~=22.2.0
+setuptools~=65.5.0
+packaging~=23.0
+zipp~=3.15.0
+build~=0.10.0
+isodate~=0.6.1
